--- a/src/pages/Performances.css
+++ b/src/pages/Performances.css
@@ -13,7 +13,8 @@
 .performances-content {
   width: 100%;
   padding: 1rem;
-  padding-bottom: calc(1rem + env(safe-area-inset-bottom));
+  padding-bottom: calc(1rem + env(safe-area-inset-bottom, 0px) + 100px);
+  margin-bottom: 100px;
   box-sizing: border-box;
   position: relative;
 }
